--- a/reserve.html
+++ b/reserve.html
@@ -14,7 +14,7 @@
   
     <header>
       <div>
-      Visit Biokovo Skywalk<br> by electric bikes!
+        <h1>Visit Biokovo Skywalk<br> by electric bikes!</h1>
      </div>
     </header>
 
