--- a/gallery.html
+++ b/gallery.html
@@ -15,7 +15,7 @@
   
     <header>
       <div>
-        Visit Biokovo Skywalk<br> by electric bikes!
+        <h1>Visit Biokovo Skywalk<br> by electric bikes!</h1>
        </div>
     </header>
 
