moving bike and thiner lines

--- a/gallery.html
+++ b/gallery.html
@@ -13,6 +13,11 @@
 
 <body>
   
+  <div class="row1">
+    <img class="bike1" src="move-up.png" alt="bike1">
+  </div>
+  <main>
+
     <header>
       <div>
         <h1>Visit Biokovo Skywalk<br> by electric bikes!</h1>
@@ -121,12 +126,14 @@
     </div>
     
   </div>
-</footer>     
+</footer>   
+</main>
+<div class="row2">
+    <img class="bike2" src="move-down.png" alt="bike2">
+</div>
 <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>    
 </body>
 </html>
-
-
 
 
 
