--- a/our_ebikes.html
+++ b/our_ebikes.html
@@ -11,12 +11,17 @@
 </head>
 
 <body>
+
+  <div class="row1">
+    <img class="bike1" src="move-up.png" alt="bike1">
+  </div>
+  <main>
   
-    <header>
-      <div>
-        <h1>Visit Biokovo Skywalk<br> by electric bikes!</h1>
-       </div>
-    </header>
+  <header>
+    <div>
+      <h1>Visit Biokovo Skywalk<br> by electric bikes!</h1>
+      </div>
+  </header>
 
     <nav class="navigation">
       <a href="index.html">Home</a>
@@ -110,6 +115,10 @@
     </div>
     
   </div>
-</footer>    
+</footer>   
+</main>
+<div class="row2">
+    <img class="bike2" src="move-down.png" alt="bike2">
+</div>
 </body>
 </html>
