--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,12 @@
 </head>
 
 <body>
-  
+
+  <div class="row1">
+    <img class="bike1" src="move-up.png" alt="bike1">
+  </div>
+  <main>
+    
     <header>
       <div>
       <h1>Visit Biokovo Skywalk<br> by electric bikes!</h1>
@@ -98,12 +103,13 @@
     </div>
     
   </div>
-</footer>      
+</footer>   
+</main>
+<div class="row2">
+    <img class="bike2" src="move-down.png" alt="bike2">
+</div>
 </body>
 </html>
-
-
-
 
 
 
