--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 </head>
 
 <body>
+  
+  <div class="row1">
+    <img class="bike1" src="move-up.png" alt="bike1">
+  </div>
+  <main>
 
   <header>
     <div>
@@ -139,6 +144,9 @@
 
     </div>
   </footer>
+</main>
+<div class="row2">
+    <img class="bike2" src="move-down.png" alt="bike2">
+</div>
 </body>
-
 </html>
