--- a/reserve.html
+++ b/reserve.html
@@ -12,6 +12,11 @@
 
 <body>
   
+  <div class="row1">
+    <img class="bike1" src="move-up.png" alt="bike1">
+  </div>
+  <main>
+
     <header>
       <div>
         <h1>Visit Biokovo Skywalk<br> by electric bikes!</h1>
@@ -95,6 +100,10 @@
     </div>
     
   </div>
-</footer>          
+</footer>   
+</main>
+<div class="row2">
+    <img class="bike2" src="move-down.png" alt="bike2">
+</div>
 </body>
 </html>
