--- a/contact.html
+++ b/contact.html
@@ -12,14 +12,12 @@
 
 <body>
 
-  
-  <main>
-    
-    <header>
-      <div>
-      <h1>Visit Biokovo Skywalk<br> by electric bikes!</h1>
-     </div>
-    </header>
+  <header>
+    <div>
+    <h1 class="small_screen">Visit Biokovo Skywalk<br> by electric bikes!</h1>
+    <h1 class="big_screen">Visit Biokovo Skywalk by electric bikes!</h1>
+    </div>
+  </header>
 
     <nav class="navigation">
       <a href="index.html">Home</a>
@@ -102,7 +100,7 @@
     
   </div>
 </footer>   
-</main>
+
 
 </body>
 </html>
