--- a/our_ebikes.html
+++ b/our_ebikes.html
@@ -13,12 +13,13 @@
 <body>
 
 
-  <main>
+
   
   <header>
     <div>
-      <h1>Visit Biokovo Skywalk<br> by electric bikes!</h1>
-      </div>
+    <h1 class="small_screen">Visit Biokovo Skywalk<br> by electric bikes!</h1>
+    <h1 class="big_screen">Visit Biokovo Skywalk by electric bikes!</h1>
+    </div>
   </header>
 
     <nav class="navigation">
@@ -114,7 +115,7 @@
     
   </div>
 </footer>   
-</main>
+
 
 </body>
 </html>
