--- a/gallery.html
+++ b/gallery.html
@@ -13,12 +13,13 @@
 
 <body>
   
-  <main>
-    <header>
-      <div>
-        <h1>Visit Biokovo Skywalk<br> by electric bikes!</h1>
-       </div>
-    </header>
+
+  <header>
+    <div>
+    <h1 class="small_screen">Visit Biokovo Skywalk<br> by electric bikes!</h1>
+    <h1 class="big_screen">Visit Biokovo Skywalk by electric bikes!</h1>
+    </div>
+  </header>
 
     <nav class="navigation">
       <a href="index.html">Home</a>
@@ -123,7 +124,7 @@
     
   </div>
 </footer>   
-</main>
+
 <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>    
 </body>
 </html>
