--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
 <body>
   
   
-  <main>
+  
 
   <header>
     <div>
-      <h1>Visit Biokovo Skywalk<br> by electric bikes!</h1>
+    <h1 class="small_screen">Visit Biokovo Skywalk<br> by electric bikes!</h1>
+    <h1 class="big_screen">Visit Biokovo Skywalk by electric bikes!</h1>
     </div>
   </header>
 
@@ -142,7 +143,7 @@
 
     </div>
   </footer>
-</main>
+
 
 </body>
 </html>
