--- a/reserve.html
+++ b/reserve.html
@@ -31,7 +31,7 @@
     </nav>
 
   <div class="wrapper-reserve">
-    <form name="contact" method="POST" data-netlyfy="true" id="my-form">
+    <form name="contact" method="POST" data-netlify="true" id="my-form">
       <div class="underline_box">
         <label for="input-name" class="required">Name:</label>
         <input type="text" name="name" id="input-name" required="required"><br>
