--- a/gallery.html
+++ b/gallery.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="style.css" rel="stylesheet" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu|Lora">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css">
-  <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-  <title>Biokovo Skywalk</title>
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu|Lora">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css">
+    <title>Biokovo Skywalk by Electric Bikes - Momentum</title>
+    <meta name="description" content="Want to visit Biokovo Skywalk attraction? Electric bikes are here to help you. Check our high quality e-bikes of CUBE and Haibike brand.">
+    <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, electric bikes, bikes, bike, e-bike, e-bikes"> 
+  </head>
 
 <body>
   
@@ -35,15 +36,15 @@
       <div class="gallery-head-1"><h2>Biokovo Skywalk</h2></div>
       <div class="carousel hs1 hsfirst"
         data-flickity='{ "wrapAround": true }'>
-        <div class="carousel-cell"><img src="./gallery/skywalk-1.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/skywalk-2.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/skywalk-3.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/skywalk-4.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/skywalk-5.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/skywalk-6.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/skywalk-7.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/skywalk-8.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/skywalk-9.jpg" alt="" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/skywalk-1.jpg" alt="Skywalk Biokovo from the air" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/skywalk-2.jpg" alt="Skywalk Biokovo" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/skywalk-3.jpg" alt="Ebike on Skywalk Biokovo" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/skywalk-4.jpg" alt="Electric bike on Biokovo Skywalk" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/skywalk-5.jpg" alt="Electric bike on Skywalk Biokovo" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/skywalk-6.jpg" alt="Skywalk Biokovo sunset" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/skywalk-7.jpg" alt="Biokovo Skywalk sunset" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/skywalk-8.jpg" alt="Sunset Biokovo Skywalk" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/skywalk-9.jpg" alt="Sunset Skywalk Biokovo" class="slika"></div>
       </div>
     </div>
 
@@ -51,15 +52,15 @@
       <div class="gallery-head-2"><h2>Happy customers</h2></div>
       <div class="carousel hs2"
         data-flickity='{ "wrapAround": true }'>
-        <div class="carousel-cell"><img src="./gallery/customers-1.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/customers-2.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/customers-3.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/customers-4.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/customers-5.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/customers-6.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/customers-7.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/customers-8.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/customers-9.jpg" alt="" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/customers-1.jpg" alt="Happy customers at the enterance" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/customers-2.jpg" alt="Happy customers posing" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/customers-3.jpg" alt="Happy customers smiling" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/customers-4.jpg" alt="Happy customers on Biokovo" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/customers-5.jpg" alt="Happy family on Biokovo" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/customers-6.jpg" alt="Happy customer on Biokovo" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/customers-7.jpg" alt="Cool happy customer" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/customers-8.jpg" alt="Happy customers on Sv. Jure" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/customers-9.jpg" alt="Happy customer" class="slika"></div>
       </div>
     </div>
 
@@ -67,15 +68,15 @@
       <div class="gallery-head-3"><h2>E-bikes and nature</h2></div>
       <div class="carousel hs3"
         data-flickity='{ "wrapAround": true }'>
-        <div class="carousel-cell"><img src="./gallery/nature-1.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/nature-2.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/nature-3.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/nature-4.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/nature-5.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/nature-6.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/nature-7.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/nature-8.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/nature-9.jpg" alt="" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/nature-1.jpg" alt="Ebikes and Biokovo view" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/nature-2.jpg" alt="Makarska from Biokovo" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/nature-3.jpg" alt="Ebikes taking rest" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/nature-4.jpg" alt="Beautiful Biokovo" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/nature-5.jpg" alt="Electric bike on Biokovo" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/nature-6.jpg" alt="Amazing Biokovo" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/nature-7.jpg" alt="Electric bike" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/nature-8.jpg" alt="Islands view from Biokovo" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/nature-9.jpg" alt="E-bike posing on Biokovo" class="slika"></div>
       </div>
     </div>
 
@@ -83,15 +84,15 @@
       <div class="gallery-head-4"><h2>Workplace and employees</h2></div>
       <div class="carousel hs4"
         data-flickity='{ "wrapAround": true }'>
-        <div class="carousel-cell"><img src="./gallery/workplace-1.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/workplace-2.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/workplace-3.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/workplace-4.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/workplace-5.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/workplace-6.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/workplace-7.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/workplace-8.jpg" alt="" class="slika"></div>
-        <div class="carousel-cell"><img src="./gallery/workplace-9.jpg" alt="" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/workplace-1.jpg" alt="Rent a bike Momentum crew" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/workplace-2.jpg" alt="Rent a bike Momentum workplace" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/workplace-3.jpg" alt="Rent a bike Momentum" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/workplace-4.jpg" alt="Rent a bike Momentum" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/workplace-5.jpg" alt="Rent a bike Momentum workday" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/workplace-6.jpg" alt="Repairing ebike" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/workplace-7.jpg" alt="Our friends" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/workplace-8.jpg" alt="Rent a bike Momentum renewing" class="slika"></div>
+        <div class="carousel-cell"><img src="./gallery/workplace-9.jpg" alt="Rent a bike Momentum" class="slika"></div>
       </div>
     </div>
   
