--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,8 @@
 
     <div class="general-contact">
       <div class="underline_box">
-        <h2 class="naslov">Have a question?</h2>
-        <p>Make a call to one of our employees or send us an email at <span class="blue">rentabikemomentum@gmail.com</span><br></p>
+        <h2 class="naslov">rentabikemomentum<br>@gmail.com</h2>
+        <img class="avatar" src="./contact/envelope.png" alt="">
         <div class="person-action-holder">
           <a class="a-action-button" href="mailto: rentabikemomentum@gmail.com"><img src="./most_used_icons/email.svg" alt="email icon">&nbsp Email us &nbsp</a>
         </div>
@@ -46,7 +46,7 @@
 
     <div class="person-1">
       <div class="underline_box">
-        <h2 class="naslov">Petar Marče</h2>
+        <h2 class="naslov">Petar Marče<br><br></h2>
         <img class="avatar" src="./contact/petar.png" alt="">
         <div class="person-action-holder">
          <a class="a-action-button" href="tel:+385976878768"><img src="./most_used_icons/phone.svg" alt="phone icon">&nbsp +385 97 6878 768 &nbsp</a>
@@ -56,7 +56,7 @@
 
     <div class="person-2">
       <div class="underline_box">
-        <h2 class="naslov">Ana Marče</h2>
+        <h2 class="naslov">Ana Marče<br><br></h2>
         <img class="avatar" src="./contact/ana.png" alt="">
         <div class="person-action-holder">
           <a class="a-action-button" href="tel:+385977721096"><img src="./most_used_icons/phone.svg" alt="phone icon">&nbsp +385 97 7721 096 &nbsp</a>
@@ -66,7 +66,7 @@
 
     <div class="person-3">
       <div class="underline_box">
-        <h2 class="naslov">Josip Marče</h2>
+        <h2 class="naslov">Josip Marče<br><br></h2>
         <img class="avatar" src="./contact/josip.png" alt="">
         <div class="person-action-holder">
           <a class="a-action-button" href="tel:+385915453237"><img src="./most_used_icons/phone.svg" alt="phone icon">&nbsp +385 91 5453 237 &nbsp</a>
