--- a/prices.html
+++ b/prices.html
@@ -7,8 +7,8 @@
     <link href="style.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu|Lora">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css">
-    <title>Biokovo Skywalk by Electric Bikes - Momentum</title>
-    <meta name="description" content="Want to visit Biokovo Skywalk attraction? Electric bikes are here to help you. Check our high quality e-bikes of CUBE and Haibike brand.">
+    <title>Biokovo Skywalk by Electric Bikes - Prices | Momentum</title>
+    <meta name="description" content="Check our prices. We offer electric bikes as well as regular bikes.">
     <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, electric bikes, bikes, bike, e-bike, e-bikes"> 
   </head>
 
@@ -19,8 +19,7 @@
 
   <header>
     <div>
-    <h1 class="small_screen">Visit Biokovo Skywalk<br> by electric bikes!</h1>
-    <h1 class="big_screen">Visit Biokovo Skywalk by electric bikes!</h1>
+    <h1>Visit Biokovo Skywalk <span class=hide_span><br></span>by electric bikes!</h1>
     </div>
   </header>
 
