--- a/gallery.html
+++ b/gallery.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu|Lora">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css">
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
-  <title>Biokovo Skywalk by Electric Bikes - Momentum</title>
-  <meta name="description" content="Want to visit Biokovo Skywalk attraction? Electric bikes are here to help you. Check our high quality e-bikes of CUBE and Haibike brand.">
+  <title>Biokovo Skywalk by Electric Bikes - Gallery | Momentum</title>
+  <meta name="description" content="Check our gallery: happy customers, photos of Biokovoand our high quality e-bikes of CUBE and Haibike brand.">
   <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, electric bikes, bikes, bike, e-bike, e-bikes"> 
 </head>
 
@@ -18,8 +18,7 @@
 
   <header>
     <div>
-    <h1 class="small_screen">Visit Biokovo Skywalk<br> by electric bikes!</h1>
-    <h1 class="big_screen">Visit Biokovo Skywalk by electric bikes!</h1>
+    <h1>Visit Biokovo Skywalk <span class=hide_span><br></span>by electric bikes!</h1>
     </div>
   </header>
 
