--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>Our Team is a passionate group of five family members and our company name is "Rent a Bike & E-Bike <span
             class="blue">Momentum</span> Makarska".
           We have been in bike renting business for <span class="blue">12 years</span> already, so we know what our
-          customers want! :)
+          customers want!
         </p>
       </div>
     </div>
@@ -71,7 +71,7 @@
       <div class="underline_box">
         <img class="icon" src="./index/ebike-icon.png" alt="">
         <h2 class="naslov">Why E-Bikes?</h2>
-        <p class="step1">
+        <p>
           It is not a secret that cars usually wait a few hours
           at the entrance of Biokovo nature park. However, the bikes
           have priority and for them there is <span class="blue">no waiting</span>.
@@ -80,15 +80,6 @@
           Also it is <span class="blue">healthy</span>
           and it is an <span class="blue">adventure</span>.
         </p>
-        <p class="step3">
-          It is not a secret that cars usually wait a few hours
-          at the entrance of Biokovo nature park. However, the bikes
-          have priority and for them there is <span class="blue">no waiting</span>.
-          If you take this trip by an e-bike you will be able to <span class="blue">adjust</span> your own <span
-            class="blue">level</span> of assistance</span>.
-          Also it is <span class="blue">healthy</span>
-          and it is an <span class="blue">adventure</span>.<br><br>
-        </p>
       </div>
     </div>
 
@@ -96,18 +87,11 @@
       <div class="underline_box">
         <img class="icon" src="./index/location-icon.png" alt="">
         <h2 class="naslov">How to find us?</h2>
-        <p class="step1">
+        <p >
           We are located on the promenade near Hotel Cental Beach 9.
           That's just 30 meters from main beach at Šetalište Dr. Franje Tuđmana 4.
           Our friendly staff is waiting for you!
           To get directions click <a class="bigger" href="https://goo.gl/maps/gAtMr4Eg7Wiy9R63A">here</a>.
-        </p>
-        <p class="step3">
-          We are located on the promenade near Hotel Cental Beach 9.
-          That's just 30 meters from main beach at Šetalište Dr. Franje Tuđmana 4.
-          Our friendly staff is waiting for you!
-          To get directions click <a class="bigger" href="https://goo.gl/maps/gAtMr4Eg7Wiy9R63A">here</a>.
-          <br><br>
         </p>
       </div>
     </div>
