--- a/our_ebikes.html
+++ b/our_ebikes.html
@@ -58,7 +58,7 @@
 
     <div class="bike-3-content">
       <div class="underline_box">
-        <h2 class="naslov">Cube Crvena muska </h2>
+        <h2 class="naslov">Cube </h2>
         <img class="ourebikes-photo" src="./our_ebikes/electric-3.jpg" alt="electric-3">
         <p>
           Available sizes: L<br>
@@ -69,7 +69,7 @@
 
     <div class="bike-4-content">
       <div class="underline_box">
-        <h2 class="naslov">Cube crvena zenska </h2>
+        <h2 class="naslov">Cube </h2>
         <img class="ourebikes-photo" src="./our_ebikes/electric-4.jpg" alt="electric-4">
         <p>
           Available sizes: M<br>
@@ -80,7 +80,7 @@
 
     <div class="bike-5-content">
       <div class="underline_box">
-        <h2 class="naslov">Cube crna </h2>
+        <h2 class="naslov">Cube </h2>
         <img class="ourebikes-photo" src="./our_ebikes/electric-5.jpg" alt="electric-5">
         <p>
           Available sizes: L, S<br>
