--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css">
     <title>Biokovo Skywalk by Electric Bikes - Contact | Momentum</title>
     <meta name="description" content="Have a question about Biokovo Skywalk attraction or our Electric bikes? Feel free to contact us!">
-    <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, electric bikes, bikes, bike, e-bike, e-bikes"> 
+    <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, Biokovo, Skywalk, Makarska, electric bikes, bikes, bike, e-bike, e-bikes"> 
   </head>
 
 <body>
