--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css">
   <title>Biokovo Skywalk by Electric Bikes - Home | Momentum</title>
   <meta name="description" content="Want to visit Biokovo Skywalk attraction? Electric bikes are here to help you. Check our high quality e-bikes of CUBE and Haibike brand.">
-  <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, electric bikes, bikes, bike, e-bike, e-bikes"> 
+  <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, Biokovo, Skywalk, Makarska, electric bikes, bikes, bike, e-bike, e-bikes"> 
 </head>
 
 <body>
-
-
-
 
   <header>
     <div>
@@ -34,11 +31,22 @@
 
 
   <div class="wrapper-index">
-
+    <div class="content-0">
+      <div class="underline_box wide">
+      <h2 class="naslov">About attraction</h2>
+      <p>Biokovo Nature Park has become the home of the most attractive walkway in Croatia!
+        Biokovo Skywalk is located at Ravna Vlaška viewpoint, 1228 meters above sea level. It is a
+        walking surface at the edge of a cliff that enables visitors to enjoy extreme and 
+        unforgettable walks in controlled conditions. 
+        We are here to make it possible for you to reach this beautiful destination
+        using our high quality electric bikes! </p>
+      </div>
+      </div>
     <div class="video-holder">
       <div class='iframe-container'>
         <iframe src='https://www.youtube.com/embed/9w3CPPyMRXE' frameborder='0' allowfullscreen></iframe>
       </div>
+     
     </div>
 
     <div class="content-1">
@@ -71,7 +79,7 @@
       <div class="underline_box">
         <img class="icon" src="./index/ebike-icon.png" alt="">
         <h2 class="naslov">Why E-Bikes?</h2>
-        <p class="step1">
+        <p>
           It is not a secret that cars usually wait a few hours
           at the entrance of Biokovo nature park. However, the bikes
           have priority and for them there is <span class="blue">no waiting</span>.
@@ -80,15 +88,7 @@
           Also it is <span class="blue">healthy</span>
           and it is an <span class="blue">adventure</span>.
         </p>
-        <p class="step3">
-          It is not a secret that cars usually wait a few hours
-          at the entrance of Biokovo nature park. However, the bikes
-          have priority and for them there is <span class="blue">no waiting</span>.
-          If you take this trip by an e-bike you will be able to <span class="blue">adjust</span> your own <span
-            class="blue">level</span> of assistance</span>.
-          Also it is <span class="blue">healthy</span>
-          and it is an <span class="blue">adventure</span>.<br><br>
-        </p>
+       
       </div>
     </div>
 
@@ -96,18 +96,11 @@
       <div class="underline_box">
         <img class="icon" src="./index/location-icon.png" alt="">
         <h2 class="naslov">How to find us?</h2>
-        <p class="step1">
+        <p>
           We are located on the promenade near Hotel Cental Beach 9.
           That's just 30 meters from main beach at Šetalište Dr. Franje Tuđmana 4.
           Our friendly staff is waiting for you!
           To get directions click <a class="bigger" href="https://goo.gl/maps/gAtMr4Eg7Wiy9R63A">here</a>.
-        </p>
-        <p class="step3">
-          We are located on the promenade near Hotel Cental Beach 9.
-          That's just 30 meters from main beach at Šetalište Dr. Franje Tuđmana 4.
-          Our friendly staff is waiting for you!
-          To get directions click <a class="bigger" href="https://goo.gl/maps/gAtMr4Eg7Wiy9R63A">here</a>.
-          <br><br>
         </p>
       </div>
     </div>
