--- a/prices.html
+++ b/prices.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css">
     <title>Biokovo Skywalk by Electric Bikes - Prices | Momentum</title>
     <meta name="description" content="Check our prices. We offer electric bikes as well as regular bikes.">
-    <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, electric bikes, bikes, bike, e-bike, e-bikes"> 
+    <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, Biokovo, Skywalk, Makarska, electric bikes, bikes, bike, e-bike, e-bikes"> 
   </head>
 
 <body>
@@ -33,7 +33,6 @@
     </nav>
 
   <div class="wrapper-prices">
-
     <div class="prices-1-content">
       <div class="underline_box">
         <img class="icon" src="./prices/electric-icon.png" alt="">
