--- a/reserve.html
+++ b/reserve.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css">
   <title>Biokovo Skywalk by Electric Bikes - Reserve | Momentum</title>
   <meta name="description" content="Make a reservation if you need ebikes or regular bikes and we will contact as fast as possible.">
-  <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, electric bikes, bikes, bike, e-bike, e-bikes"> 
+  <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, Biokovo, Skywalk, Makarska, electric bikes, bikes, bike, e-bike, e-bikes"> 
 </head>
 
 <body>
