--- a/gallery.html
+++ b/gallery.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css">
   <title>Biokovo Skywalk by Electric Bikes - Gallery | Momentum</title>
   <meta name="description" content="Check our gallery: happy customers, photos of Biokovoand our high quality e-bikes of CUBE and Haibike brand.">
-  <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, electric bikes, bikes, bike, e-bike, e-bikes"> 
+  <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, Biokovo, Skywalk, Makarska, electric bikes, bikes, bike, e-bike, e-bikes"> 
 </head>
 
 <body>
