--- a/our_ebikes.html
+++ b/our_ebikes.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css">
     <title>Biokovo Skywalk by Electric Bikes - Ebikes | Momentum</title>
     <meta name="description" content="Photos and information about our high quality e-bikes of CUBE and Haibike brand.">
-    <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, electric bikes, bikes, bike, e-bike, e-bikes"> 
+    <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, Biokovo, Skywalk, Makarska, electric bikes, bikes, bike, e-bike, e-bikes"> 
   </head>
 
 <body>
