--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <title>Biokovo Skywalk by Electric Bikes - Home | Momentum</title>
   <meta name="description" content="Want to visit Biokovo Skywalk attraction? Electric bikes are here to help you. Check our high quality e-bikes of CUBE and Haibike brand.">
   <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, Biokovo, Skywalk, Makarska, electric bikes, bikes, bike, e-bike, e-bikes"> 
+  <link rel="shortcut icon" type="image/jpg" href="./favicon.png"/>
 </head>
 
 <body>
