feat(): add thumbnail

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
   <meta name="description" content="Want to visit Biokovo Skywalk attraction? Electric bikes are here to help you. Check our high quality e-bikes of CUBE and Haibike brand.">
   <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, Biokovo, Skywalk, Makarska, electric bikes, bikes, bike, e-bike, e-bikes"> 
   <link rel="shortcut icon" type="image/jpg" href="./favicon.png"/>
+
+  <meta property="og:image" content="./thumbnail_resized.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://biokovoskywalk.com/" />
+  <meta property="og:title" content="Visit Biokovo Skywalk by electric bikes" /> 
+  <meta property="og:description" content="We offer high quality electric bikes of Haibike and Cube brand 
+  equipped with strong batteries of 400 and 500 Wh which is enough not only 
+  to reach Skywalk, but also the very top of Biokovo - Sv. Jure." />
 </head>
 
 <body>
