feat(): add thumbnail

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, Biokovo, Skywalk, Makarska, electric bikes, bikes, bike, e-bike, e-bikes"> 
   <link rel="shortcut icon" type="image/jpg" href="./favicon.png"/>
 
-  <meta property="og:image" content="./thumbnail_resized.png" />
+  <meta property="og:image" content="./thumbnail_resized.jpg" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://biokovoskywalk.com/" />
   <meta property="og:title" content="Visit Biokovo Skywalk by electric bikes" /> 
