feat(): add new bikes and change bike namings

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Ubuntu|Lora">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/solid.min.css">
   <title>Biokovo Skywalk by Electric Bikes - Home | Momentum</title>
-  <meta name="description" content="Want to visit Biokovo Skywalk attraction? Electric bikes are here to help you. Check our high quality e-bikes of CUBE and Haibike brand.">
+  <meta name="description" content="Want to visit Biokovo Skywalk attraction? Electric bikes are here to help you. Check our high-quality e-bikes of CUBE and Haibike brand.">
   <meta name="keywords" content="Skywalk Biokovo, Biokovo Skywalk, Biokovo, Skywalk, Makarska, electric bikes, bikes, bike, e-bike, e-bikes"> 
   <link rel="shortcut icon" type="image/jpg" href="./favicon.png"/>
 
@@ -23,7 +23,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://biokovoskywalk.com/" />
   <meta property="og:title" content="Visit Biokovo Skywalk by electric bikes" /> 
-  <meta property="og:description" content="We offer high quality electric bikes of Haibike and Cube brand 
+  <meta property="og:description" content="We offer high-quality electric bikes of Haibike and Cube brand 
   equipped with strong batteries of 400 and 500 Wh which is enough not only 
   to reach Skywalk, but also the very top of Biokovo - Sv. Jure." />
 </head>
@@ -54,12 +54,12 @@
     <div class="content-0">
       <div class="underline_box wide">
       <h2 class="naslov">About attraction</h2>
-      <p>Biokovo Nature Park has become the home of the most attractive walkway in Croatia!
+      <p>Nature Park Biokovo is now home of the most attractive walkway in Croatia!
         Biokovo Skywalk is located at Ravna Vlaška viewpoint, 1228 meters above sea level. It is a
         walking surface at the edge of a cliff that enables visitors to enjoy extreme and 
         unforgettable walks in controlled conditions. 
         We are here to make it possible for you to reach this beautiful destination
-        using our high quality electric bikes! </p>
+        using our high-quality electric bikes! </p>
       </div>
       </div>
     <div class="video-holder">
@@ -86,7 +86,7 @@
         <img class="icon" src="./index/offer-icon.png" alt="">
         <h2 class="naslov">What do we offer?</h2>
         <p>
-          We offer high quality <span class="blue">electric bikes</span> of Haibike and Cube brand that are equipped
+          We offer high-quality <span class="blue">electric bikes</span> of Haibike and Cube brand that are equipped
           with strong batteries of 400 and 500 Wh which is enough not only to reach Skywalk, but
           also the very top of Biokovo - Sv. Jure.
           And of course, we offer <span class="blue">regular bikes</span> as well. Also, feel free to ask
@@ -100,13 +100,13 @@
         <img class="icon" src="./index/ebike-icon.png" alt="">
         <h2 class="naslov">Why E-Bikes?</h2>
         <p>
-          It is not a secret that cars usually wait a few hours
-          at the entrance of Biokovo nature park. However, the bikes
-          have priority and for them there is <span class="blue">no waiting</span>.
+          It’s no secret that cars usually wait a few hours
+          at the entrance of Biokovo nature park. However, bikes
+          have priority and for them there is <span class="blue">no waiting</span>!
           If you take this trip by an e-bike you will be able to <span class="blue">adjust</span> your own <span
             class="blue">level</span> of assistance</span>.
-          Also it is <span class="blue">healthy</span>
-          and it is an <span class="blue">adventure</span>.
+          Not only is it a <span class="blue">healthy</span> activity, but also
+          breathtaking <span class="blue">adventure</span> you’ll always remember. 
         </p>
       </div>
     </div>
