--- a/our_ebikes.html
+++ b/our_ebikes.html
@@ -36,19 +36,30 @@
 
     <div class="bike-1-content">
       <div class="underline_box">
-        <h2 class="naslov">Haibike SDURO HardNine 3.0</h2>
+        <h2 class="naslov">Haibike SDURO HardNine 3.0 2020</h2>
         <img class="ourebikes-photo" src="./our_ebikes/electric-1.jpg" alt="electric-1">
         <p>
-          Available sizes: L, M<br>
-          Battery capacity: 500 wh<br>
+          Available sizes: M, L, XL<br>
+          Battery capacity: 500 Wh<br>
         </p>
       </div>
     </div>
 
     <div class="bike-2-content">
       <div class="underline_box">
-        <h2 class="naslov">Haibike SDURO HardNine 1.0</h2>
+        <h2 class="naslov">Haibike SDURO HardSeven 5.0 2021</h2>
         <img class="ourebikes-photo" src="./our_ebikes/electric-2.jpg" alt="electric-2">
+        <p>
+          Available sizes: M<br>
+          Battery capacity: 500 Wh<br>
+        </p>
+      </div>
+    </div>
+
+    <div class="bike-3-content">
+      <div class="underline_box">
+        <h2 class="naslov">Haibike SDURO HardNine 1.0 2020 </h2>
+        <img class="ourebikes-photo" src="./our_ebikes/electric-3.jpg" alt="electric-3">
         <p>
           Available sizes: XL<br>
           Battery capacity: 400 Wh<br>
@@ -56,35 +67,46 @@
       </div>
     </div>
 
-    <div class="bike-3-content">
-      <div class="underline_box">
-        <h2 class="naslov">Cube </h2>
-        <img class="ourebikes-photo" src="./our_ebikes/electric-3.jpg" alt="electric-3">
-        <p>
-          Available sizes: L<br>
-          Battery capacity: 500 wh<br>
-        </p>
-      </div>
-    </div>
-
     <div class="bike-4-content">
       <div class="underline_box">
-        <h2 class="naslov">Cube </h2>
+        <h2 class="naslov">Giant Talon E+ 29 3 2021 </h2>
         <img class="ourebikes-photo" src="./our_ebikes/electric-4.jpg" alt="electric-4">
         <p>
           Available sizes: M<br>
-          Battery capacity: 400 wh<br>
+          Battery capacity: 400 Wh<br>
         </p>
       </div>
     </div>
 
     <div class="bike-5-content">
       <div class="underline_box">
-        <h2 class="naslov">Cube </h2>
+        <h2 class="naslov">CUBE Acid Hybrid ONE 400 29 2018 </h2>
         <img class="ourebikes-photo" src="./our_ebikes/electric-5.jpg" alt="electric-5">
         <p>
           Available sizes: L, S<br>
-          Battery capacity: 400 wh<br>
+          Battery capacity: 400 Wh<br>
+        </p>
+      </div>
+    </div>
+
+    <div class="bike-6-content">
+      <div class="underline_box">
+        <h2 class="naslov">CUBE Cross Hybrid Pro 400 2019 </h2>
+        <img class="ourebikes-photo" src="./our_ebikes/electric-6.jpg" alt="electric-6">
+        <p>
+          Available sizes: M<br>
+          Battery capacity: 400 Wh<br>
+        </p>
+      </div>
+    </div>
+
+    <div class="bike-7-content">
+      <div class="underline_box">
+        <h2 class="naslov">CUBE Cross Hybrid Pro 500 2019 </h2>
+        <img class="ourebikes-photo" src="./our_ebikes/electric-7.jpg" alt="electric-7">
+        <p>
+          Available sizes: L<br>
+          Battery capacity: 500 Wh<br>
         </p>
       </div>
     </div>
