--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </button>
 
             <button id="quote-button" aria-controls="contact-form-wrapper" aria-expanded="false">
-                <span>Get Quote</span>
+                <span>Contact Us</span>
                 <img class="fake-favicon" src="icons/favicon/chat.png" alt="">
             </button>
 
@@ -399,7 +399,7 @@
             <div id="contact-form-wrapper" data-visible="false">
                 <form name="homepage-contact" method="POST" data-netlify="true" action="confirmation.html">
                     <div class="contact-form-header flex">
-                        <h3>Get quote</h3>
+                        <h3>Feel free to ask</h3>
                         <div id="contact-form-close" aria-controls="contact-form-wrapper" aria-expanded="false" role="button">
                             <span class="sr-only">Close contact form</span>
                         </div>
