redirecting to homepage

--- a/gallery.html
+++ b/gallery.html
@@ -61,7 +61,7 @@
     <!-- End Google Tag Manager (noscript) -->
     <header class="primary-header flex">
 
-        <a href="#">
+        <a href="index.html">
             <img src="/icons/white-logotip.png" alt="Momentum company logotip" class="logo-mobile">
             <img src="/icons/logo.svg" alt="Momentum company logo" class="logo-desktop">
         </a>
