fix wrong mail action

--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
 
     <nav class="mobile-action-nav">
         <a href="https://api.whatsapp.com/send?phone=+385976878768"><img src="icons/whatsapp-icon-6598d2.png" alt="whatsapp icon"></a>
-        <a href="mailto: rentabikemmentum@gmail.com"><img src="icons/mail-icon-6598d2.png" alt="mail icon"></a>
+        <a href="mailto: rentabikemomentum@gmail.com"><img src="icons/mail-icon-6598d2.png" alt="mail icon"></a>
         <a href="tel:+385976878768"><img src="icons/call-icon-6598d2.png" alt="phone icon"></a>
         <a href="https://goo.gl/maps/gAtMr4Eg7Wiy9R63A" id="last-mobile-action"><img src="icons/directions-icon-6598d2.png" alt="directions icon"></a>
     </nav>
