--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <link rel="canonical" href="https://www.biokovoskywalk.com" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://biokovoskywalk.com/" />
+    <meta property="og:url" content="https://www.biokovoskywalk.com/" />
     <meta property="og:title" content="Visit Biokovo Skywalk by electric bikes" />
     <meta property="og:description" content="We offer high-quality electric bikes of Haibike and Cube brand 
   equipped with strong batteries of 400 and 500 Wh which is enough not only 
   to reach Skywalk, but also the very top of Biokovo - Sv. Jure." />
-    <meta property="og:image" content="./photos/og-image.jpg">
+    <meta property="og:image" content="./photos/biokovo-skywalk-matko-begovic.jpg">
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
