--- a/index.html
+++ b/index.html
@@ -442,6 +442,18 @@
         <section aria-labelledby="ebike-carousel-title" class="grid">
             <div class="carousel carousel-e-bike" data-flickity='{"imagesLoaded": true }'>
                 <div class="carousel-cell">
+                    <img src="/photos/home/ebikes/CUBE-REACTION-hybrid-performance.jpg" alt="CUBE ACID Hybrid ONE 400">
+                    <p><span>CUBE REACTION hybrid PFM</span><br> Battery: Bosch 625Wh &nbsp Sizes: XL</p>
+                </div>
+                <div class="carousel-cell">
+                    <img src="/photos/home/ebikes/CUBE-REACTION-hybrid-performance-trapeze.jpg" alt="CUBE ACID Hybrid ONE 400">
+                    <p><span>CUBE REACTION hybrid PFM trapeze</span><br> Battery: Bosch 625Wh &nbsp Sizes: M</p>
+                </div>
+                <div class="carousel-cell">
+                    <img src="/photos/home/ebikes/Haibike-Hardnine-5.jpg" alt="Haibike HardNine 5">
+                    <p><span>Haibike HardNine 5</span><br> Battery: Bosch 500Wh &nbsp Sizes: L</p>
+                </div>
+                <div class="carousel-cell">
                     <img src="/photos/home/ebikes/CUBE-ACID-Hybrid-ONE-400-1.jpg" alt="CUBE ACID Hybrid ONE 400">
                     <p><span>CUBE ACID Hybrid ONE</span><br> Battery: Bosch 400Wh &nbsp Sizes: L</p>
                 </div>
@@ -461,10 +473,6 @@
                     <img src="/photos/home/ebikes/Haibike-HardNine-3.jpg" alt="Haibike HardNine 3">
                     <p><span>Haibike HardNine 3</span><br> Battery: Yamaha 500Wh &nbsp Sizes: M,L,XL</p>
                 </div>
-                <!-- <div class="carousel-cell">
-                    <img src="/photos/home/ebikes/Haibike-Hardnine-5.jpg" alt="Haibike HardNine 5">
-                    <p><span>Haibike HardNine 5</span><br> Battery: Bosch 500Wh &nbsp Sizes: M</p>
-                </div> -->
                 <div class="carousel-cell">
                     <img src="/photos/home/ebikes/Haibike-HardSeven-5.jpg" alt="Haibike HardSeven 5">
                     <p><span>Haibike HardSeven 5</span><br> Battery: Bosch 500Wh &nbsp Sizes: M</p>
